[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/ui/bts1/hover.tres" type="StyleBox" id=1]
[ext_resource path="res://res/ui/bts1/normal.tres" type="StyleBox" id=2]
[ext_resource path="res://pages/sheets/Import_Sheet.gd" type="Script" id=3]
[ext_resource path="res://res/ui/bts1/pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://res/fonts/merriweather.regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="ExportSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="TItre" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 35.0

[node name="Bt_back" type="Button" parent="VBoxContainer/TItre"]
margin_right = 163.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_RETOUR"

[node name="Label" type="Label" parent="VBoxContainer/TItre"]
margin_left = 167.0
margin_right = 520.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "KEY_IMPORT"
align = 1
valign = 1

[node name="ImportType" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 520.0
margin_bottom = 74.0

[node name="Label" type="Label" parent="VBoxContainer/ImportType"]
margin_top = 3.0
margin_right = 228.0
margin_bottom = 32.0
text = "KEY_IMPORT_TYPE"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/ImportType"]
margin_left = 232.0
margin_right = 316.0
margin_bottom = 35.0
text = "JSON"
items = [ "CSV", null, false, 0, null, "JSON", null, false, 1, null ]
selected = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 520.0
margin_bottom = 82.0

[node name="CSV_OPTION" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 86.0
margin_right = 520.0
margin_bottom = 236.0

[node name="TitreCSV" type="Label" parent="VBoxContainer/CSV_OPTION"]
margin_right = 520.0
margin_bottom = 29.0
text = "KEY_O_CSV"

[node name="Row_Sep" type="HBoxContainer" parent="VBoxContainer/CSV_OPTION"]
margin_top = 33.0
margin_right = 520.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="VBoxContainer/CSV_OPTION/Row_Sep"]
margin_top = 5.0
margin_right = 187.0
margin_bottom = 34.0
text = "KEY_SEP_ROWS"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CSV_OPTION/Row_Sep"]
margin_left = 191.0
margin_right = 285.0
margin_bottom = 39.0
text = "\\n"

[node name="Col_Sep" type="HBoxContainer" parent="VBoxContainer/CSV_OPTION"]
margin_top = 76.0
margin_right = 520.0
margin_bottom = 115.0

[node name="Label" type="Label" parent="VBoxContainer/CSV_OPTION/Col_Sep"]
margin_top = 5.0
margin_right = 178.0
margin_bottom = 34.0
text = "KEY_SEP_COLS"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/CSV_OPTION/Col_Sep"]
margin_left = 182.0
margin_right = 276.0
margin_bottom = 39.0
text = "|^|"

[node name="Label" type="Label" parent="VBoxContainer/CSV_OPTION"]
margin_top = 119.0
margin_right = 520.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 2 )
text = "KEY_DEFAULT_DONT_KNOW"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/CSV_OPTION"]
margin_top = 146.0
margin_right = 520.0
margin_bottom = 150.0

[node name="DETAILS_CSV" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 240.0
margin_right = 520.0
margin_bottom = 416.0

[node name="Titre" type="HBoxContainer" parent="VBoxContainer/DETAILS_CSV"]
margin_right = 520.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="VBoxContainer/DETAILS_CSV/Titre"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 34.0
text = "KEY_TITRE"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/DETAILS_CSV/Titre"]
margin_left = 134.0
margin_right = 520.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Feuille"

[node name="Sep_Char" type="HBoxContainer" parent="VBoxContainer/DETAILS_CSV"]
margin_top = 43.0
margin_right = 520.0
margin_bottom = 82.0

[node name="Label" type="Label" parent="VBoxContainer/DETAILS_CSV/Sep_Char"]
margin_top = 5.0
margin_right = 196.0
margin_bottom = 34.0
text = "KEY_SEP_CHARS"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/DETAILS_CSV/Sep_Char"]
margin_left = 200.0
margin_right = 294.0
margin_bottom = 39.0
text = "||"

[node name="Explaination" type="Label" parent="VBoxContainer/DETAILS_CSV/Sep_Char"]
margin_left = 298.0
margin_top = 8.0
margin_right = 520.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "KEY_EXPL_SEP"
valign = 1
autowrap = true

[node name="Col1" type="HBoxContainer" parent="VBoxContainer/DETAILS_CSV"]
margin_top = 86.0
margin_right = 520.0
margin_bottom = 125.0

[node name="Label" type="Label" parent="VBoxContainer/DETAILS_CSV/Col1"]
margin_top = 5.0
margin_right = 190.0
margin_bottom = 34.0
text = "KEY_NOM_COL1"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/DETAILS_CSV/Col1"]
margin_left = 194.0
margin_right = 520.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "col1"

[node name="Col2" type="HBoxContainer" parent="VBoxContainer/DETAILS_CSV"]
margin_top = 129.0
margin_right = 520.0
margin_bottom = 168.0

[node name="Label" type="Label" parent="VBoxContainer/DETAILS_CSV/Col2"]
margin_top = 5.0
margin_right = 193.0
margin_bottom = 34.0
text = "KEY_NOM_COL2"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/DETAILS_CSV/Col2"]
margin_left = 197.0
margin_right = 520.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "col2"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/DETAILS_CSV"]
margin_top = 172.0
margin_right = 520.0
margin_bottom = 176.0

[node name="Chemin" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 520.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="VBoxContainer/Chemin"]
margin_top = 3.0
margin_right = 155.0
margin_bottom = 32.0
text = "KEY_FICHIER"

[node name="PATH" type="Label" parent="VBoxContainer/Chemin"]
margin_left = 159.0
margin_right = 349.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "NONE "
align = 1
valign = 1
autowrap = true

[node name="Bt_Path" type="Button" parent="VBoxContainer/Chemin"]
margin_left = 353.0
margin_right = 520.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_CHEMIN"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
margin_top = 125.0
margin_right = 520.0
margin_bottom = 129.0

[node name="Button_Import" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 520.0
margin_bottom = 178.0
alignment = 1

[node name="Bt_Import" type="Button" parent="VBoxContainer/Button_Import"]
margin_left = 164.0
margin_right = 356.0
margin_bottom = 45.0
rect_min_size = Vector2( 150, 45 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "KEY_IMPORTER"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 48.0
margin_right = 32.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 70 )
rect_scale = Vector2( 0.9, 0.9 )
window_title = "Enregistrer un fichier"

[connection signal="pressed" from="VBoxContainer/TItre/Bt_back" to="." method="_on_Bt_back_pressed"]
[connection signal="item_selected" from="VBoxContainer/ImportType/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="VBoxContainer/Chemin/Bt_Path" to="." method="_on_Bt_Path_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_Import/Bt_Import" to="." method="_on_Bt_Import_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
